--- a/Vacanta6.html
+++ b/Vacanta6.html
@@ -202,10 +202,22 @@
         <section id="reasons" class="section">
             <h2>De ce sa alegi aceasta oferta?</h2>
             <div class="destinations">
-                
+
+               <div class="destination">
+                    <h3>Bangkok</h3>
+                    <p>Bangkok oferă o combinație unică de cultură vibrantă, gastronomie delicioasă, temple impresionante, viață de noapte animată și shopping diversificat.</p>
+                </div> 
                 <div class="destination">
-                    <h3>Pattaya</h3>
-                    <p>Phuket atrage turiști cu plajele sale idilice, viața de noapte vibrantă, o gamă variată de activități acvatice, restaurante excelente și cultură locală fascinantă.</p>
+                    <h3>Ayutthaya</h3>
+                    <p>Ayutthaya este renumit pentru ruinele sale istorice, templele antice și palatele impresionante, fiind o destinație perfectă pentru iubitorii de istorie și cultură.</p>
+                </div>
+                <div class="destination">
+                    <h3>Chiang Mai</h3>
+                    <p>Chiang Mai este cunoscut pentru cultura sa bogată, templele antice și munții frumoși, fiind un amestec perfect de tradiție și aventură.</p>
+                </div>
+                <div class="destination">
+                    <h3>Krabi</h3>
+                    <p>Krabi este celebru pentru plajele sale spectaculoase, stâncile calcaroase, insulele exotice și apa cristalină, fiind o destinație ideală pentru iubitorii de natură și aventură.</p>
                 </div>
                 <div class="destination">
                     <h3>Phuket</h3>
@@ -215,10 +227,7 @@
                     <h3>Phi Phi</h3>
                     <p>Insulele Phi Phi sunt renumite pentru peisajele spectaculoase, plajele cu nisip alb, ape cristaline, activități de snorkeling și scuba diving, precum și atmosfera relaxată.</p>
                 </div>
-                <div class="destination">
-                    <h3>Bangkok</h3>
-                    <p>Bangkok oferă o combinație unică de cultură vibrantă, gastronomie delicioasă, temple impresionante, viață de noapte animată și shopping diversificat.</p>
-                </div>
+        
             </div>
         </section>
 
@@ -226,25 +235,35 @@
             <h2>Exclusive Holiday Offers</h2>
             <div class="destinations">
                  <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731834993/iStock-689879464_nayo2f.jpg" alt="Bangkok Tour">
-                    <h3>Pattaya</h3>
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833737/iStock-2113145841_vafiss.jpg" alt="Bangkok Tour">
+                    <h3>Bangkok </h3>
+                    <p>Sedere 5 nopti </p>
+                </div> 
+                 <div class="destination">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739164770/902_u0ewt4.jpg" alt="Bangkok Tour">
+                    <h3>Ayutthaya</h3>
+                    <p>Sedere 1 zi </p>
+                </div>
+                <div class="destination">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739165011/822_hma5pb.jpg" alt="Bangkok Tour">
+                    <h3>Chiang Mai</h3>
+                    <p>Sedere 3 nopti </p>
+                </div>
+                <div class="destination">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731929999/iStock-1473165467_tjjfil.jpg" alt="Bangkok Tour">
+                    <h3>Krabi</h3>
                     <p>Sedere 3 nopti </p>
                 </div>
                 <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833320/iStock-1491859203_ry1lbb.jpg" alt="Phuket Getaway">
                     <h3>Phuket Escape</h3>
-                    <p>Sedere 5 nopti </p>
+                    <p>Sedere 2 nopti </p>
                 </div>
                 <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731837122/iStock-1128965769-2_pwcjc5.jpg" alt="Phi Phi Islands">
                     <h3>Phi Phi Island</h3>
                     <p>Sedere 1 zi </p>
                 </div>
-                  <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833737/iStock-2113145841_vafiss.jpg" alt="Bangkok Tour">
-                    <h3>Bangkok </h3>
-                    <p>Sedere 3 nopti </p>
-                </div> 
             </div>
         </section>
 
@@ -302,12 +321,12 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 9</h3>
-                    <p>• One Day Trip To <b>Railay Beach</b></p>
+                    <p>• Trip To <b>Railay Beach</b></p>
                     <p>•⁠ Cave of the Princess Goddess Legend</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 10</h3>
-                    <p>•Viziteaza <b>4 Islands And Hong Islands</b> With Luxury Longtail Boat </p>
+                    <p>• Viziteaza <b>4 Islands And Hong Islands</b> With Luxury Longtail Boat </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 11</h3>
