--- a/offers.html
+++ b/offers.html
@@ -207,31 +207,31 @@
                 <a href="honeymoon.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
-                <img src="https://images.pexels.com/photos/1647110/pexels-photo-1647110.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Adventure Tour">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731834993/iStock-689879464_nayo2f.jpg" alt="Adventure Tour">
                 <h3>Pattaya - Phuket - Phi Phi - Bangkok (14 zile) </h3>
                 <p>Bucura-te de 14 zile de vis in Pattaya, Phuket, Phi Phi si Bangkok, relaxare, aventura si peisaje spectaculoase</p>
                 <a href="Vacanta1.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
-                <img src="https://images.unsplash.com/photo-1698114424118-028873182fe4?q=80&w=2073&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Culinary Tour">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739168785/779_1_jkapky.jpg" alt="Culinary Tour">
                 <h3>Bangkok - Chiang Mai - Phuket - Phi Phi (14 zile)</h3>
                 <p>Bucura-te de 14 zile de neuitat in Bangkok, Chiang Mai, Phuket si Phi Phi, cu peisaje paradisiace si experiente deosebite</p>
                 <a href="Vacanta2.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
-                <img src="https://images.pexels.com/photos/4394296/pexels-photo-4394296.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Wellness Retreat">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731929999/iStock-1473165467_tjjfil.jpg" alt="Wellness Retreat">
                 <h3>Bangkok - Krabi - Phuket - Phi Phi (14 zile)</h3>
                 <p>Bucura-te de 14 zile de neuitat in Bangkok, Krabi, Phuket si Phi Phi, cu peisaje paradisiace si experiente deosebite</p>
                 <a href="Vacanta3.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
-                <img src="https://images.pexels.com/photos/708764/pexels-photo-708764.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739169181/848_vbsr33.jpg" alt="Cultural Experience">
                 <h3>Khao Sok - Khao Lak - Phuket - Phi Phi (12 zile)</h3>
                 <p>Bucura-te de 12 zile de aventura si relaxare in Khao Sok, Khao Lak, Phuket si Phi Phi</p>
                 <a href="Vacanta4.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
-                <img src="https://images.pexels.com/photos/13099696/pexels-photo-13099696.jpeg" alt="Cultural Experience">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731932208/iStock-871569534_chti1w.jpg" alt="Cultural Experience">
                 <h3>Bangkok - Chiang Rai - Chiang Mai - Krabi - Phuket - Phi Phi (14 zile)</h3>
                 <p>Bucura-te de 14 zile in Bangkok, Chiang Rai, Chiang Mai, Krabi, Phuket si Phi Phi, explorand cultura si peisaje de vis</p>
                 <a href="Vacanta5.html" class="cta-button">Detalii</a>
