--- a/offers.html
+++ b/offers.html
@@ -243,7 +243,7 @@
                 <a href="Vacanta6.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
-                <img src="https://images.pexels.com/photos/10849935/pexels-photo-10849935.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731929849/iStock-1462519363_wxoxd7.jpg" alt="Cultural Experience">
                 <h3>Bangkok - Ayutthaya - Kanchanaburi - Khao Yai - Phuket - Phi Phi (15 zile) </h3>
                 <p>Bucura-te de 15 zile de neuitat in Bangkok, Ayutthaya, Kanchanaburi, Khao Yai, Phuket si Phi Phi, cu istorie, natura si plaje spectaculoase</p>
                 <a href="Vacanta7.html" class="cta-button">Detalii</a>
