--- a/offers.html
+++ b/offers.html
@@ -237,7 +237,7 @@
                 <a href="Vacanta5.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
-                <img src="https://images.pexels.com/photos/1154193/pexels-photo-1154193.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731929849/iStock-1462519363_wxoxd7.jpg" alt="Cultural Experience">
                 <h3>Bangkok - Ayutthaya - Chiang Mai - Krabi - Phuket - Phi Phi (14 zile) </h3>
                 <p>Bucura-te de 14 zile de descoperiri in Bangkok, Ayutthaya, Chiang Mai, Krabi, Phuket si Phi Phi, combinand istorie, cultura si plaje de vis</p>
                 <a href="Vacanta6.html" class="cta-button">Detalii</a>
