--- a/index.html
+++ b/index.html
@@ -307,19 +307,19 @@
         <h2>Destinatii populare</h2>
         <div class="destinations">
             <div class="destination">
-                <img src="https://cdn.pixabay.com/photo/2017/08/29/12/03/asia-2693042_1280.jpg" alt="Bangkok">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833737/iStock-2113145841_vafiss.jpg" alt="Bangkok">
                 <h3>Bangkok</h3>
                 <p>Experimenteaza un oras care modernul cu cultura</p>
                 <a href="Bangkok.html" class="cta-button">Descopera</a>
             </div>
             <div class="destination">
-                <img src="https://cdn.pixabay.com/photo/2017/04/12/11/05/rice-terraces-2224264_1280.jpg" alt="Chiang Mai">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739165011/822_hma5pb.jpg" alt="Chiang Mai">
                 <h3>Chiang Mai</h3>
                 <p>Exploreaza un oras montan plin de natura si cultura</p>
                 <a href="Chiangmai.html" class="cta-button">Descopera</a>
             </div>
             <div class="destination">
-                <img src="https://cdn.pixabay.com/photo/2016/06/12/03/48/thailand-1451382_1280.jpg" alt="Phuket">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731837122/iStock-1128965769-2_pwcjc5.jpg" alt="Phuket">
                 <h3>Phuket</h3>
                 <p>Relaxeaza-te pe plaja pe timp de zi si distreaza-te pe timp de noapte</p>
                 <a href="Phuket.html" class="cta-button">Descopera</a>
