--- a/Vacanta8.html
+++ b/Vacanta8.html
@@ -308,24 +308,28 @@
                 <div class="itinerary-card">
                     <h3>Ziua 10</h3>
                     <p>• Discover the waterfall </p>
-                    <p>• Go on a snorkeling trip </p>
+                    <p>• Go on a snorkeling trip to nearby islands </p>
+                    <p>• Enjoy the clear waters and coral reefs </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 11</h3>
-                    <p>• 
+                    <p>• Experience scuba diving </p>
+                    <p>• Explore the quieter beaches </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 12</h3>
+                    <p>• Free time to relax on the beach </p>
+                    <p>• Explore the island by scooter </p>
+                    <p>• Have fun at the Full Moon Party </p>
+                </div>
+                <div class="itinerary-card">
+                    <h3>Ziua 13</h3>
                     <p>• 
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 14</h3>
                     <p>• 
                 </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 14</h3>
-                    <p>• Shopping la un mall cu preturi uimitoare</p>
-                </div>            
             </div>
         </section>
         
