--- a/Vacanta8.html
+++ b/Vacanta8.html
@@ -283,9 +283,9 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 6</h3>
-                    <p>• Visit the Big Buddha Temple </p>
+                    <p>• Visit the <b>Big Buddha Temple</b> </p>
                     <p>• Visit Waterfalls and swim in the natural pools </p>
-                    <p>• Discover and feed elephants </p>
+                    <p>• Discover and feed <b>elephants</b> </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 7</h3>
@@ -313,22 +313,24 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 11</h3>
-                    <p>• Experience scuba diving </p>
-                    <p>• Explore the quieter beaches </p>
+                    <p>• Experience <b>scuba diving</b> </p>
+                    <p>• Enjoy a sunset cocktail or dinner </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 12</h3>
                     <p>• Free time to relax on the beach </p>
                     <p>• Explore the island by scooter </p>
-                    <p>• Have fun at the Full Moon Party </p>
+                    <p>• Have fun at the <b>Full Moon Party</b> </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 13</h3>
-                    <p>• 
+                    <p>• A one day trip to an island with white fine sand and crystal-clear water </p>
+                    <p>• Snorkeling around the island </p>
+                    <P>• Take a short hike to the viewpoint </P>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 14</h3>
-                    <p>• 
+                    <p>• Termina vacanta cu o dimineata la plaja </p>
                 </div>
             </div>
         </section>
