--- a/offers.html
+++ b/offers.html
@@ -249,9 +249,9 @@
                 <a href="Vacanta7.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
-                <img src="https://cdn.pixabay.com/photo/2015/03/26/11/11/beach-692608_1280.jpg" alt="Cultural Experience">
-                <h3>Up coming soon (7 zile) </h3>
-                <p>Koh Samui este o insula exotica, cu plaje superbe, ape cristaline si peisaje tropicale</p>
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739183264/yavor-punchev-EerfoqyC7aM-unsplash_gfaocl.jpg" alt="Cultural Experience">
+                <h3>Bangkok - Ko Samui - Ko Pha Ngan (14 zile) </h3>
+                <p>Bucura-te de 14 zile </p>
                 <a href="Vacanta8.html" class="cta-button">Detalii</a>
             </div>
             
