--- a/Vacanta8.html
+++ b/Vacanta8.html
@@ -202,49 +202,49 @@
         <section id="reasons" class="section">
             <h2>De ce sa alegi aceasta oferta?</h2>
             <div class="destinations">
-                
-                <div class="destination">
-                    <h3>Pattaya</h3>
-                    <p>Phuket atrage turiști cu plajele sale idilice, viața de noapte vibrantă, o gamă variată de activități acvatice, restaurante excelente și cultură locală fascinantă.</p>
-                </div>
-                <div class="destination">
-                    <h3>Phuket</h3>
-                    <p>Insulele Phi Phi sunt renumite pentru peisajele spectaculoase, plajele cu nisip alb, ape cristaline, activități de snorkeling și scuba diving, precum și atmosfera relaxată.</p>
-                </div>
-                <div class="destination">
-                    <h3>Phi Phi</h3>
-                    <p>Insulele Phi Phi sunt renumite pentru peisajele spectaculoase, plajele cu nisip alb, ape cristaline, activități de snorkeling și scuba diving, precum și atmosfera relaxată.</p>
-                </div>
-                <div class="destination">
+
+                 <div class="destination">
                     <h3>Bangkok</h3>
                     <p>Bangkok oferă o combinație unică de cultură vibrantă, gastronomie delicioasă, temple impresionante, viață de noapte animată și shopping diversificat.</p>
                 </div>
+                <div class="destination">
+                    <h3>Ko Samui</h3>
+                    <p>Phuket atrage turiști cu plajele sale idilice, viața de noapte vibrantă, o gamă variată de activități acvatice, restaurante excelente și cultură locală fascinantă.</p>
+                </div>
+                <div class="destination">
+                    <h3>Ko Pha Ngan</h3>
+                    <p>Insulele Phi Phi sunt renumite pentru peisajele spectaculoase, plajele cu nisip alb, ape cristaline, activități de snorkeling și scuba diving, precum și atmosfera relaxată.</p>
+                </div>
+                <div class="destination">
+                    <h3>One Day Island</h3>
+                    <p>Insulele Phi Phi sunt renumite pentru peisajele spectaculoase, plajele cu nisip alb, ape cristaline, activități de snorkeling și scuba diving, precum și atmosfera relaxată.</p>
+                </div>     
             </div>
         </section>
 
         <section id="offers" class="section">
             <h2>Exclusive Holiday Offers</h2>
             <div class="destinations">
-                 <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731834993/iStock-689879464_nayo2f.jpg" alt="Bangkok Tour">
-                    <h3>Pattaya</h3>
-                    <p>Sedere 3 nopti </p>
-                </div>
                 <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833320/iStock-1491859203_ry1lbb.jpg" alt="Phuket Getaway">
-                    <h3>Phuket Escape</h3>
-                    <p>Sedere 5 nopti </p>
-                </div>
-                <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731837122/iStock-1128965769-2_pwcjc5.jpg" alt="Phi Phi Islands">
-                    <h3>Phi Phi Island</h3>
-                    <p>Sedere 1 zi </p>
-                </div>
-                  <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833737/iStock-2113145841_vafiss.jpg" alt="Bangkok Tour">
                     <h3>Bangkok </h3>
                     <p>Sedere 3 nopti </p>
                 </div> 
+                 <div class="destination">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731834993/iStock-689879464_nayo2f.jpg" alt="Bangkok Tour">
+                    <h3>Ko Samui</h3>
+                    <p>Sedere 5 nopti </p>
+                </div>
+                <div class="destination">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833320/iStock-1491859203_ry1lbb.jpg" alt="Phuket Getaway">
+                    <h3>Ko Pha Ngan</h3>
+                    <p>Sedere 5 nopti </p>
+                </div>
+                <div class="destination">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731837122/iStock-1128965769-2_pwcjc5.jpg" alt="Phi Phi Islands">
+                    <h3>One Day Island</h3>
+                    <p>Sedere 1 zi </p>
+                </div>   
             </div>
         </section>
 
