--- a/Vacanta8.html
+++ b/Vacanta8.html
@@ -209,15 +209,15 @@
                 </div>
                 <div class="destination">
                     <h3>Ko Samui</h3>
-                    <p>Phuket atrage turiști cu plajele sale idilice, viața de noapte vibrantă, o gamă variată de activități acvatice, restaurante excelente și cultură locală fascinantă.</p>
+                    <p>Ko Samui atrage vizitatori cu stațiunile de lux, plajele frumoase, viața de noapte vibrantă, spa urile de top și atracțiile culturale.</p>
                 </div>
                 <div class="destination">
                     <h3>Ko Pha Ngan</h3>
-                    <p>Insulele Phi Phi sunt renumite pentru peisajele spectaculoase, plajele cu nisip alb, ape cristaline, activități de snorkeling și scuba diving, precum și atmosfera relaxată.</p>
+                    <p>Ko Pha Ngan atrage turiști cu plajele sale liniștite, celebrele Full Moon Parties, activități acvatice, fructe de mare delicioase și cultura locală.</p>
                 </div>
                 <div class="destination">
                     <h3>One Day Island</h3>
-                    <p>Insulele Phi Phi sunt renumite pentru peisajele spectaculoase, plajele cu nisip alb, ape cristaline, activități de snorkeling și scuba diving, precum și atmosfera relaxată.</p>
+                    <p>Atrage turiști cu plaje de nisip fin, ape cristaline, oportunități excelente de snorkeling și peisaje spectaculoase.</p>
                 </div>     
             </div>
         </section>
@@ -231,17 +231,17 @@
                     <p>Sedere 3 nopti </p>
                 </div> 
                  <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731834993/iStock-689879464_nayo2f.jpg" alt="Bangkok Tour">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739184123/1048_crb27w.jpg" alt="Bangkok Tour">
                     <h3>Ko Samui</h3>
                     <p>Sedere 5 nopti </p>
                 </div>
                 <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833320/iStock-1491859203_ry1lbb.jpg" alt="Phuket Getaway">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739184469/elizabeth-gottwald-oacWGBoBQ98-unsplash_1_ainraa.jpg" alt="Phuket Getaway">
                     <h3>Ko Pha Ngan</h3>
                     <p>Sedere 5 nopti </p>
                 </div>
                 <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731837122/iStock-1128965769-2_pwcjc5.jpg" alt="Phi Phi Islands">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739184026/1088_slj2v9.jpg" alt="Phi Phi Islands">
                     <h3>One Day Island</h3>
                     <p>Sedere 1 zi </p>
                 </div>   
