--- a/index.html
+++ b/index.html
@@ -348,13 +348,13 @@
             </div>
             <div class="offer">
                 <img src="https://cdn.pixabay.com/photo/2017/07/25/14/48/phi-phi-islands-2538412_1280.jpg" alt="Adventure Tour">
-                <h3>Bangkok + Phuket + Phi Phi Islands (11 zile) </h3>
+                <h3>Pattaya - Phuket - Phi Phi - Bangkok (14 zile) </h3>
                 <p>Descoperă cultura si natura Thailandezeaca</p>
                 <a href="Vacanta1.html" class="detalii-button">Detalii</a>
             </div>
             <div class="offer">
                 <img src="https://cdn.pixabay.com/photo/2016/09/18/23/48/chiang-mai-1679325_1280.jpg" alt="Culinary Tour">
-                <h3>Bangkok + Chiang Mai + Chiang Rai (10 zile)</h3>
+                <h3>Bangkok - Chiang Mai - Phuket - Phi Phi (14 zile)</h3>
                 <p>Explorati Bangkok-ul vibrant, templele antice din Chiang Mai si peisajele din Chiang Rai</p>
                 <a href="Vacanta2.html" class="detalii-button">Detalii</a>
             </div>
