--- a/index.html
+++ b/index.html
@@ -347,19 +347,19 @@
                 <a href="honeymoon.html" class="detalii-button">Detalii</a>
             </div>
             <div class="offer">
-                <img src="https://cdn.pixabay.com/photo/2017/07/25/14/48/phi-phi-islands-2538412_1280.jpg" alt="Adventure Tour">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731834993/iStock-689879464_nayo2f.jpg" alt="Adventure Tour">
                 <h3>Pattaya - Phuket - Phi Phi - Bangkok (14 zile) </h3>
                 <p>Descoperă cultura si natura Thailandezeaca</p>
                 <a href="Vacanta1.html" class="detalii-button">Detalii</a>
             </div>
             <div class="offer">
-                <img src="https://cdn.pixabay.com/photo/2016/09/18/23/48/chiang-mai-1679325_1280.jpg" alt="Culinary Tour">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739171378/yannick-apollon-2MjQoZxNOxo-unsplash_nuoyfd.jpg" alt="Culinary Tour">
                 <h3>Bangkok - Chiang Mai - Phuket - Phi Phi (14 zile)</h3>
                 <p>Explorati Bangkok-ul vibrant, templele antice din Chiang Mai si peisajele din Chiang Rai</p>
                 <a href="Vacanta2.html" class="detalii-button">Detalii</a>
             </div>
             <div class="offer">
-                <img src="https://cdn.pixabay.com/photo/2021/09/06/16/04/magnifying-glass-6601965_960_720.jpg" alt="Wellness Retreat">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739185546/landscape-with-plane-flying-sky_uny5rx.jpg" alt="Wellness Retreat">
                 <h3>Vezi alte oferte!</h3>
                 <p>Exploreaza toate ofertele, sau creaza-ti propia experienta.</p>
                 <a href="offers.html" class="detalii-button">Detalii</a>
