--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         </p>
         <div class="offers-container">
             <div class="offer">
-                <img src="https://cdn.pixabay.com/photo/2013/11/19/09/35/glasses-213156_1280.jpg" alt="Honeymoon">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739186866/IMG_9647_yoy0pn.jpg" alt="Honeymoon">
                 <h3>Luna de miere</h3>
                 <p>Oferim pachete romantice în cele mai frumoase locații din Thailanda.</p>
                 <a href="honeymoon.html" class="detalii-button">Detalii</a>
