--- a/honeymoon.html
+++ b/honeymoon.html
@@ -337,7 +337,7 @@
                 </div>
                 <div class="destination">
                     <h3>Preturi accesibile</h3>
-                    <p>Atat cazarile, cat si mancarea au preturi foarte bune pentru o locatie exotica</p>
+                    <p>Atat cazarile, cat si mancarea au preturi foarte bune pentru o locatie exotica.</p>
                 </div>
             </div>
         </section>
@@ -347,20 +347,20 @@
             <div class="destinations">
                 <div class="destination">
                     <img src="https://images.pexels.com/photos/1024960/pexels-photo-1024960.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Beach Package">
-                    <h3>Beach Getaway</h3>
-                    <p>Krabi + Koh Yao Yai + Bangkok</p>
+                    <h3>Cultural Experience</h3>
+                    <p>Bangkok - Phuket - Phi Phi</p>
                     <a href="honeymoon1.html" class="cta-button">Descopera</a>
                 </div>
                 <div class="destination">
                     <img src="https://images.pexels.com/photos/14358508/pexels-photo-14358508.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Cultural Package">
-                    <h3>Cultural Experience</h3>
-                    <p>Chiang Mai + Krabi</p>
+                    <h3>Beach Getaway</h3>
+                    <p>Chiang Mai - Krabi - Ko Lipe</p>
                     <a href="honeymoon2.html" class="cta-button">Descopera</a>
                 </div>
                 <div class="destination">
                     <img src="https://images.pexels.com/photos/15898046/pexels-photo-15898046/free-photo-of-bride-and-groom-kissing-on-rocks-in-forest.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Adventure Package">
                     <h3>Adventure Package</h3>
-                    <p>Bangkok + Khao Lak + Krabi</p>
+                    <p>Bangkok - Khao Sok - Khao Lak</p>
                     <a href="honeymoon3.html" class="cta-button">Descopera</a>
                 </div>
             </div>
