--- a/honeymoon.html
+++ b/honeymoon.html
@@ -346,14 +346,14 @@
             <h2>Oferte</h2>
             <div class="destinations">
                 <div class="destination">
-                    <img src="https://images.pexels.com/photos/1024960/pexels-photo-1024960.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Beach Package">
-                    <h3>Cultural Experience</h3>
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739262078/couple-happy-together-vacation-by-ocean_kj0xzf.jpg" alt="Beach Package">
+                    <h3>Beach Getaway</h3>
                     <p>Bangkok - Phuket - Phi Phi</p>
                     <a href="honeymoon1.html" class="cta-button">Descopera</a>
                 </div>
                 <div class="destination">
-                    <img src="https://images.pexels.com/photos/14358508/pexels-photo-14358508.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Cultural Package">
-                    <h3>Beach Getaway</h3>
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739262345/11044_imfuak.jpg" alt="Cultural Package">
+                    <h3>Cultural Experience</h3>
                     <p>Chiang Mai - Krabi - Ko Lipe</p>
                     <a href="honeymoon2.html" class="cta-button">Descopera</a>
                 </div>
