--- a/honeymoon.html
+++ b/honeymoon.html
@@ -370,11 +370,11 @@
             <h2>Galerie</h2>
             <div class="gallery-container">
             <div class="gallery active">
-                <img src="https://images.pexels.com/photos/17746130/pexels-photo-17746130/free-photo-of-wat-arun-temple-in-bangkok.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Gallery Image 1">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739162638/1206_i4xur8.jpg" alt="Gallery Image 1">
                 <h3> </h3>
             </div>
             <div class="gallery">
-                <img src="https://images.pexels.com/photos/472309/pexels-photo-472309.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Gallery Image 2">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739171160/andrzej-suwara-rexWi-Qa5uI-unsplash_cllbi4.jpg" alt="Gallery Image 2">
                 <h3> </h3>
             </div>
             <div class="gallery">
@@ -382,19 +382,19 @@
                 <h3> </h3>
             </div>
             <div class="gallery">
-                <img src="https://images.pexels.com/photos/2240361/pexels-photo-2240361.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Gallery Image 3">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739165011/822_hma5pb.jpg" alt="Gallery Image 3">
                 <h3> </h3>
             </div>
             <div class="gallery">
-                <img src="https://images.pexels.com/photos/1007657/pexels-photo-1007657.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Gallery Image 3">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731929849/iStock-1462519363_wxoxd7.jpg" alt="Gallery Image 3">
                 <h3> </h3>
             </div>
             <div class="gallery">
-                <img src="https://images.pexels.com/photos/50689/skytrain-thailand-transportation-sky-50689.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Gallery Image 3">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833737/iStock-2113145841_vafiss.jpg" alt="Gallery Image 3">
                 <h3> </h3>
             </div>
             <div class="gallery">
-                <img src="https://images.pexels.com/photos/3314263/pexels-photo-3314263.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Gallery Image 3">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739162709/839_xmmt4c.jpg" alt="Gallery Image 3">
                 <h3> </h3>
             </div>
             <button class="prev" onclick="showGallery(-1)">❮</button>
