--- a/honeymoon.html
+++ b/honeymoon.html
@@ -358,7 +358,7 @@
                     <a href="honeymoon2.html" class="cta-button">Descopera</a>
                 </div>
                 <div class="destination">
-                    <img src="https://images.pexels.com/photos/15898046/pexels-photo-15898046/free-photo-of-bride-and-groom-kissing-on-rocks-in-forest.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Adventure Package">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739162709/839_xmmt4c.jpg" alt="Adventure Package">
                     <h3>Adventure Package</h3>
                     <p>Bangkok - Khao Sok - Khao Lak</p>
                     <a href="honeymoon3.html" class="cta-button">Descopera</a>
@@ -394,7 +394,7 @@
                 <h3> </h3>
             </div>
             <div class="gallery">
-                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739162709/839_xmmt4c.jpg" alt="Gallery Image 3">
+                <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739184026/1088_slj2v9.jpg" alt="Gallery Image 3">
                 <h3> </h3>
             </div>
             <button class="prev" onclick="showGallery(-1)">❮</button>
